crates/model/tests/ui/fail_validated_proposal_construction.stderr
error[E0624]: associated function `from_validated` is private
  --> tests/ui/fail_validated_proposal_construction.rs:19:45
   |
19 |       let _validated = Proposal::<Validated>::from_validated(
   |                                               ^^^^^^^^^^^^^^ private associated function
   |
  ::: $WORKSPACE/crates/core/src/types/proposal.rs
   |
   | /     pub(crate) fn from_validated(
   | |         id: ProposalId,
   | |         content: ProposedContent,
   | |         provenance: ObservationProvenance,
   | |     ) -> Self {
   | |_____________- private associated function defined here
